# artifacts/api-server/src/services/store.service.ts
@@ -45,6 +45,7 @@ export async function getStorefront() {
     id: store.id,
     name: store.name,
     slug: store.slug,
+    tagline: store.tagline,
     logoUrl: store.logoUrl,
     primaryColor: store.primaryColor,
     secondaryColor: store.secondaryColor,
@@ -53,6 +54,10 @@ export async function getStorefront() {
     homepageTemplate: store.homepageTemplate,
     currency: store.currency,
     country: store.country,
+    addressLine1: store.addressLine1,
+    city: store.city,
+    province: store.province,
+    postalCode: store.postalCode,
     contactEmail: store.contactEmail,
     contactPhone: store.contactPhone,
     activePaymentMethods: ["manual_fake_qris"],
